# error_correction_demo

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  Dockerfile  docker-compose.yml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
src/: main.rs
